# scidemo

./: CMakeLists.txt  main.cpp  sci-utils.hpp
